--- a/package.json
+++ b/package.json
@@ -35,9 +35,14 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
+    "@angular-devkit/core": "^20.3.8",
+    "@angular-devkit/schematics": "^20.3.8",
     "@angular/build": "^20.3.8",
     "@angular/cli": "^20.3.8",
     "@angular/compiler-cli": "^20.3.0",
+    "@nx/angular": "22.1.1",
+    "@nx/workspace": "22.1.1",
+    "@schematics/angular": "^20.3.8",
     "@types/jasmine": "~5.1.0",
     "@types/luxon": "^3.7.1",
     "jasmine-core": "~5.9.0",
@@ -46,6 +51,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nx": "22.1.1",
     "typescript": "~5.9.2"
   }
 }
