--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/router": "^20.3.0",
+    "@angular/common": "^20.3.12",
+    "@angular/compiler": "^20.3.12",
+    "@angular/core": "^20.3.12",
+    "@angular/forms": "^20.3.12",
+    "@angular/platform-browser": "^20.3.12",
+    "@angular/router": "^20.3.12",
+    "@maskito/angular": "^4.0.1",
+    "@maskito/core": "^4.0.1",
     "luxon": "^3.7.2",
     "ngx-cookie-service": "^20.1.1",
     "rxjs": "~7.8.0",
@@ -35,11 +37,11 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/core": "^20.3.8",
-    "@angular-devkit/schematics": "^20.3.8",
-    "@angular/build": "^20.3.8",
-    "@angular/cli": "^20.3.8",
-    "@angular/compiler-cli": "^20.3.0",
+    "@angular-devkit/core": "^20.3.12",
+    "@angular-devkit/schematics": "^20.3.12",
+    "@angular/build": "^20.3.12",
+    "@angular/cli": "^20.3.12",
+    "@angular/compiler-cli": "^20.3.12",
     "@nx/angular": "22.1.1",
     "@nx/workspace": "22.1.1",
     "@schematics/angular": "^20.3.8",
