--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@angular/router": "^20.3.12",
     "@maskito/angular": "^4.0.1",
     "@maskito/core": "^4.0.1",
+    "@ngrx/effects": "^20.1.0",
+    "@ngrx/store": "^20.1.0",
     "luxon": "^3.7.2",
     "ngx-cookie-service": "^20.1.1",
     "rxjs": "~7.8.0",
