перешли на пакет yarn и создали прокси сервер

--- a/nx.json
+++ b/nx.json
@@ -69,7 +69,8 @@
     "@nx/angular:component": {
       "style": "scss",
       "skipTests": true,
-      "standalone": true
+      "standalone": true,
+      "changeDetection": "OnPush"
     }
   }
 }
