--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "@angular/router": "^20.3.12",
     "@maskito/angular": "^4.0.1",
     "@maskito/core": "^4.0.1",
+    "@ng-web-apis/common": "^4.12.2",
+    "@ng-web-apis/intersection-observer": "^4.12.2",
     "@ngrx/effects": "^20.1.0",
     "@ngrx/store": "^20.1.0",
     "luxon": "^3.7.2",
     "ngx-cookie-service": "^20.1.1",
+    "ngx-infinite-scroll": "^21.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "yarn": "^1.22.22",
