Доделал setting page добавил адрес и создал новый полигон для rxjs

--- a/.nx/workspace-data/project-graph.json
+++ b/.nx/workspace-data/project-graph.json
@@ -14303,6 +14303,11 @@
       },
       {
         "source": "polygon",
+        "target": "npm:rxjs",
+        "type": "static"
+      },
+      {
+        "source": "polygon",
         "target": "npm:jest-preset-angular",
         "type": "static"
       }
@@ -33461,5 +33466,5 @@
   },
   "version": "6.0",
   "errors": [],
-  "computedAt": 1766474550022
+  "computedAt": 1766500573782
 }
